# PiVis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
clients/TestClientConsole/: TestClientConsole.sln
clients/TestClientConsole/TestClientConsole/: Program.cs  TestClientConsole.csproj
clients/TestClientWpf/: TestClientWpf.sln
clients/TestClientWpf/Clients/: Class1.cs  Clients.csproj
clients/TestClientWpf/TestClientWpf/: MainWindow.xaml  MainWindow.xaml.cs  TestClientWpf.csproj
clients/include/: test.hpp
proto/: pivis.proto  test.proto
servers/include/: BaseServer.hpp  test.hpp
servers/src/: main.cpp  test.cpp
services/include/: BaseService.hpp  ServiceManager.hpp  test.hpp
services/src/: ServiceManager.cpp  main.cpp  test.cpp
